# gllearnQT

./: CMakeLists.txt  README.md  example.txt
UI/include/: addcomponent.h  bearingparameterwidget.h  editmeshing.h  eight.h  five.h  four.h  gainian.h  gear.h  geargroup.h  gearparameterwidget.h  mainwindow.h  nestedmainwindow.h  nestedwidget.h  newpage.h  one.h  redesign.h  seven.h  shaft.h  shaftparameterwidget.h  six.h  spokesdetail.h  three.h  two.h
UI/src/: addcomponent.cpp  addcomponent.ui  bearingparameterwidget.cpp  bearingparameterwidget.ui  dialog.ui  editmeshing.cpp  editmeshing.ui  eight.cpp  eight.ui  five.cpp  five.ui  four.cpp  four.ui  gainian.cpp  gainian.ui  gear.cpp  gear.ui  geargroup.cpp  geargroup.ui  gearparameterwidget.cpp  gearparameterwidget.ui  mainwindow.cpp  mainwindow.ui  nestedmainwindow.cpp  nestedmainwindow.ui  nestedwidget.cpp  nestedwidget.ui  newpage.cpp  newpage.ui  one.cpp  one.ui  redesign.cpp  redesign.ui  seven.cpp  seven.ui  shaft.cpp  shaft.ui  shaftparameterwidget.cpp  shaftparameterwidget.ui  six.cpp  (+7 more)
include/: Container.h  IDGenerator.h  Materials.h  camera.h  drawBear.h  drawGear.h  drawModel.h  drawNormal.h  drawTransimisssion.h  glm.hpp  headInclude.h  line.h  mesh.h  model.h  object.h  setting.h  shader_m.h
include/glad/: glad.h
src/: Materials.cpp  draw.fs  draw.vs  drawBear.cpp  drawGear.cpp  drawModel.cpp  drawNormal.cpp  drawTransimission.cpp  glad.c  object.cpp  setting.cpp
